@@ -75,6 +75,7 @@ class StringInflectionsTest < Test::Unit::TestCase
 
     assert_equal "o", s.last
     assert_equal "llo", s.last(3)
+    assert_equal "hello", s.last(10)
 
     assert_equal 'x', 'x'.first
     assert_equal 'x', 'x'.first(4)
