@@ -1,5 +1,7 @@
 *SVN*
 
+* Make core_ext/string/access.rb multibyte safe. Closes #6388 [Manfred Stienstra]
+
 * Make String#chars slicing behaviour consistent with String. Closes #6387 [Manfred Stienstra]
 
 * Pull in latest multibye patch. Closes #6346 [Manfred Stienstra]
